refactor: add lang, link

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
  <head>
+  <a href="https://shayhowe.com">Shay Howe</a>
+  <meta charset="UTF-8">
+  <link href="адрес_файла_стилей.css" rel="stylesheet">
   <title>
    Важнейшее
   </title>
+ </head>
+ <body>
   <ol type="1">
    <li> Я первый! </li>
    <li> А я второй! </li>
@@ -12,5 +17,5 @@
   <ul type="square">
    <li> А я уроженец Малевича! </li>
   </ul>
- </head>
+ </body>
 </html>
