feat: add project template

--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
  <head>
   <a href="https://shayhowe.com">Shay Howe</a>
   <meta charset="UTF-8">
+  <meta name="keywords" content="однокурсники, соцсеть, вуз, учёба, общаться">
+  <meta name="description" content="Здесь вы можете обсудить всё, что угодно со своими однокурсниками. От политики вуза до цвета подаренных носков на 23 февраля. Найди своих однокурсников или они найдут тебя раньше!">
   <link href="адрес_файла_стилей.css" rel="stylesheet">
-  <title>
-   Важнейшее
-  </title>
+  <link href=".css" rel="stylesheet">
+  <title>Однокурсники</title>
  </head>
  <body>
-  <ol type="1">
-   <li> Я первый! </li>
-   <li> А я второй! </li>
-   <li> Я ни первый, ни второй((( </li>
-  </ol>
-  <ul type="square">
-   <li> А я уроженец Малевича! </li>
-  </ul>
+  <header>
+
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
  </body>
 </html>
