--- a/Fellow-Students/index.html
+++ b/Fellow-Students/index.html
@@ -58,49 +58,200 @@
 			</div>
 		</div>
 		<div class="page__main main">
-			<div class="main__user-information user-information">
-				<a class="user-information__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
-					<img
-									class="user-avatar"
-									src="images/avatar.jpg"
-									alt=""
-					>
-				</a>
-				<div class="user-facts user-information__some-facts">
-					<!-- село, сколько годиков, какой уник и прочее -->
-					<div class="user-fact user-facts__elem">
-						Фамилия: Чечулин
-					</div>
-					<div class="user-fact user-facts__elem">
-						Имя: Лев
-					</div>
-					<div class="user-fact user-facts__elem">
-						Отчество: Олегович
-					</div>
-					<div class="user-fact user-facts__elem">
-						Город: СПБ
-					</div>
-					<div class="user-fact user-facts__elem">
-						Школа: №10
-					</div>
-					<div class="user-fact user-facts__elem">
-						Университет: ИТМО
-					</div>
-					<div class="user-fact user-facts__elem">
-						id: 733822
+			<div class="main__about-user information-block">
+				<div class="main__user-information user-information">
+					<a class="user-information__photo-link"
+					   href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+						<img
+										class="user-avatar"
+										src="images/avatar.jpg"
+										alt=""
+						>
+					</a>
+					<div class="user-facts user-information__some-facts">
+						<!-- село, сколько годиков, какой уник и прочее -->
+						<div class="user-fact user-facts__elem">
+							Фамилия: Чечулин
+						</div>
+						<div class="user-fact user-facts__elem">
+							Имя: Лев
+						</div>
+						<div class="user-fact user-facts__elem">
+							Отчество: Олегович
+						</div>
+						<div class="user-fact user-facts__elem">
+							Город: СПБ
+						</div>
+						<div class="user-fact user-facts__elem">
+							Школа: №10
+						</div>
+						<div class="user-fact user-facts__elem">
+							Университет: ИТМО
+						</div>
+						<div class="user-fact user-facts__elem">
+							id: 733822
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="main__user-content user-content">
-				<div class="photos user-content__photos">
-
-				</div>
-				<div class="blog user-content__blog">
-
+				<div class="main__user-content user-content">
+					<p class="user-content__photos-paragraph">
+						Фотографии пользователя:
+					</p>
+					<div class="photos user-content__photos">
+						<a class="photos__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+							<img
+											class="photos__photo"
+											src="images/user-photos/1.bmp"
+											alt=""
+							>
+						</a>
+						<a class="photos__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+							<img
+											class="photos__photo"
+											src="images/user-photos/2.bmp"
+											alt=""
+							>
+						</a>
+						<a class="photos__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+							<img
+											class="photos__photo"
+											src="images/user-photos/3.bmp"
+											alt=""
+							>
+						</a>
+						<a class="photos__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+							<img
+											class="photos__photo"
+											src="images/user-photos/4.bmp"
+											alt=""
+							>
+						</a>
+						<a class="photos__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+							<img
+											class="photos__photo"
+											src="images/user-photos/5.bmp"
+											alt=""
+							>
+						</a>
+						<a class="photos__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+							<img
+											class="photos__photo"
+											src="images/user-photos/6.bmp"
+											alt=""
+							>
+						</a>
+						<a class="photos__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+							<img
+											class="photos__photo"
+											src="images/user-photos/7.bmp"
+											alt=""
+							>
+						</a>
+						<a class="photos__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+							<img
+											class="photos__photo"
+											src="images/user-photos/8.bmp"
+											alt=""
+							>
+						</a>
+						<a class="photos__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+							<img
+											class="photos__photo"
+											src="images/user-photos/9.bmp"
+											alt=""
+							>
+						</a>
+						<a class="photos__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+							<img
+											class="photos__photo"
+											src="images/user-photos/10.bmp"
+											alt=""
+							>
+						</a>
+						<a class="photos__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+							<img
+											class="photos__photo"
+											src="images/user-photos/11.bmp"
+											alt=""
+							>
+						</a>
+						<a class="photos__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+							<img
+											class="photos__photo"
+											src="images/user-photos/12.bmp"
+											alt=""
+							>
+						</a>
+					</div>
+					<p class="user-content__blog-paragraph">
+						Посты:
+					</p>
+					<div class="blog user-content__blog">
+						<div class="user-content__post post">
+							<div class="post__time">
+								24 января, 18:07
+							</div>
+							<div class="post__text">
+								Пацаны, я наконец-то сделал
+								<a class="classic-link" href="1-2.html">
+									первую лабу
+								</a>
+								!!!
+							</div>
+							<div class="post__likes">
+								0 likes
+							</div>
+						</div>
+						<div class="user-content__post post">
+							<div class="post__time">
+								23 ноября 2022, 17:39
+							</div>
+							<div class="post__text">
+								Всем привет, сегодня я покакал.
+							</div>
+							<div class="post__likes">
+								45 likes
+							</div>
+						</div>
+						<div class="user-content__post post">
+							<div class="post__time">
+								14 сентября 2022, 08:36
+							</div>
+							<div class="post__text">
+								Мы не рыбы, рыбы немы.
+							</div>
+							<div class="post__likes">
+								14 likes
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="main__monetized-content monetized-content">
-
+				<a class="monetized-content__photo-link" href="https://ptoday.ru/novosti-i-sobytiya/sudbu-rossii-i-ukrainy-v-2023-godu-prorochila-vanga-chto-predskazala-providitsa/">
+					<img
+									class="monetized-content__photo"
+									src="images/adv/vanga.bmp"
+									alt=""
+					>
+				</a>
+				<a class="monetized-content__photo-link" href="https://www.infoniac.ru/astro/">
+					<img
+									class="monetized-content__photo"
+									src="images/adv/moon.bmp"
+									alt=""
+					>
+				</a>
+				<a class="monetized-content__photo-link" href="http://localhost:63342/Web-Programming-Course/Fellow-Students/index.html">
+					<img
+									class="monetized-content__photo"
+									src="images/adv/adblock.bmp"
+									alt=""
+					>
+				</a>
+				<p class="warning">
+					Вы нарушаете закон Российской Федерации. Пожалуйста, отключите AdBlock и другие блокировщики рекламы, если не хотите, чтобы на вас было возбуждено уголовное дело.
+				</p>
 			</div>
 		</div>
 		<div class="footer">
