fix: lab-4 current-header script

--- a/Fellow-Students/messages.html
+++ b/Fellow-Students/messages.html
@@ -39,8 +39,8 @@
 			</a>
 		</div>
 		<div class="left-header__elem simple-block">
-			<a class="left-header__settings settings" href="settings.html">
-				<p class="settings__text">
+			<a class="left-header__settings user-settings" href="settings.html">
+				<p class="user-settings__text">
 					Настройки
 				</p>
 			</a>
@@ -68,6 +68,7 @@
 	<br/>
 	Страница была загружена за <span id="download speed"></span> ms
 	<script type="text/javascript" src="scripts/footer-stopwatch.js"></script>
+	<script type="text/javascript" src="scripts/current-header-element.js"></script>
 </div>
 </body>
 </html>
