--- a/Fellow-Students/messages.html
+++ b/Fellow-Students/messages.html
@@ -10,7 +10,7 @@
 <body class="page">
 <div class="page__head header">
 	<div class="page__left-head left-header">
-		<a class="left-header__logo logo" href="http://github.com/jizapika" target="_blank">
+		<a class="left-header__logo logo" href="https://github.com/jizapika" target="_blank">
 			<img
 							class="logo__img"
 							src="images/logo.jpg"
