--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="keywords" content="однокурсники, соцсеть, вуз, учёба, общаться">
     <meta name="description" content="Здесь вы можете обсудить всё, что угодно со своими однокурсниками. От политики вуза до цвета подаренных носков на 23 февраля. Найди своих однокурсников или они найдут тебя раньше!">
-		<link rel="stylesheet" href="styles/cleaner.css">
-		<link rel="stylesheet" href="styles/main.css">
-		<script type="text/javascript" src="scripts/pageStarter.js"></script>
     <title>Однокурсники</title>
 	</head>
 	<body class="page">
-		<a href="../Fellow-Students/index.html">
+		<a href="Fellow-Students/index.html">
 			Перейти к сайту
 		</a>
 	</body>
