feat: add lab-5

--- a/Fellow-Students/pages/1-2.html
+++ b/Fellow-Students/pages/1-2.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="keywords" content="однокурсники, соцсеть, вуз, учёба, общаться">
 		<meta name="description" content="Здесь вы можете обсудить всё, что угодно со своими однокурсниками. От политики вуза до цвета подаренных носков на 23 февраля. Найди своих однокурсников или они найдут тебя раньше!">
-		<link rel="stylesheet" href="styles/1-2.css">
-		<title>Однокурсники</title>
+		<link rel="stylesheet" href="../styles/1-2.css">
+		<title>Лабы</title>
 	</head>
 	<body class="page">
 		<nav class="menu">
@@ -48,7 +48,7 @@
 		</p>
 
 		<b>Гляньте</b>, какой красивый шаблон сайта: <br>
-		<img src="../src/template.bmp" alt=""> <br>
+		<img src="../../src/template.bmp" alt=""> <br>
 		<a name="number">
 			У меня красивый номер телефона. Открою одну цифру за 50р.
 		</a>
