--- a/Fellow-Students/pages/friends.html
+++ b/Fellow-Students/pages/friends.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Title</title>
-		<link rel="stylesheet" href="styles/cleaner.css">
-		<link rel="stylesheet" href="styles/friends.css">
-		<script type="text/javascript" src="scripts/pageStarter.js"></script>
+		<title>Друзья</title>
+		<link rel="stylesheet" href="../styles/cleaner.css">
+		<link rel="stylesheet" href="../styles/friends.css">
+		<script type="text/javascript" src="../scripts/pageStarter.js"></script>
 	</head>
 	<body class="page">
 	<div class="page__head header">
@@ -13,7 +13,7 @@
 			<a class="left-header__logo logo" href="https://github.com/jizapika" target="_blank">
 				<img
 								class="logo__img"
-								src="images/logo.jpg"
+								src="../images/logo.jpg"
 								alt=""
 				>
 			</a>
@@ -50,7 +50,7 @@
 			<a href="index.html">
 				<img
 								class="header-user-avatar"
-								src="images/avatar.jpg"
+								src="../images/avatar.jpg"
 								alt=""
 				>
 			</a>
@@ -66,7 +66,7 @@
 					<div class="friend__friend-avatar friend-avatar">
 						<img
 										class="friend-avatar__image"
-										src="images/friends-content/4.jpg"
+										src="../images/friends-content/4.jpg"
 										alt=""
 						>
 					</div>
@@ -90,7 +90,7 @@
 					<div class="friend__friend-avatar friend-avatar">
 						<img
 										class="friend-avatar__image"
-										src="images/friends-content/3.jpg"
+										src="../images/friends-content/3.jpg"
 										alt=""
 						>
 					</div>
@@ -114,7 +114,7 @@
 					<div class="friend__friend-avatar friend-avatar">
 						<img
 										class="friend-avatar__image"
-										src="images/friends-content/2.jpg"
+										src="../images/friends-content/2.jpg"
 										alt=""
 						>
 					</div>
@@ -138,7 +138,7 @@
 					<div class="friend__friend-avatar friend-avatar">
 						<img
 										class="friend-avatar__image"
-										src="images/friends-content/1.jpg"
+										src="../images/friends-content/1.jpg"
 										alt=""
 						>
 					</div>
@@ -163,8 +163,8 @@
 		copyright ITMOStudents
 		<br/>
 		Страница была загружена за <span id="download speed"></span> ms
-		<script type="text/javascript" src="scripts/footer-stopwatch.js"></script>
-		<script type="text/javascript" src="scripts/current-header-element.js"></script>
+		<script type="text/javascript" src="../scripts/footer-stopwatch.js"></script>
+		<script type="text/javascript" src="../scripts/current-header-element.js"></script>
 	</div>
 	</body>
 </html>
