--- a/Fellow-Students/pages/settings.html
+++ b/Fellow-Students/pages/settings.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
-	<link rel="stylesheet" href="styles/cleaner.css">
-	<link rel="stylesheet" href="styles/settings.css">
-	<script type="text/javascript" src="scripts/pageStarter.js"></script>
+	<title>Настройки</title>
+	<link rel="stylesheet" href="../styles/cleaner.css">
+	<link rel="stylesheet" href="../styles/settings.css">
+	<script type="text/javascript" src="../scripts/pageStarter.js"></script>
 </head>
 	<body class="page">
 	<div class="page__head header">
@@ -13,7 +13,7 @@
 			<a class="left-header__logo logo" href="https://github.com/jizapika" target="_blank">
 				<img
 								class="logo__img"
-								src="images/logo.jpg"
+								src="../images/logo.jpg"
 								alt=""
 				>
 			</a>
@@ -50,7 +50,7 @@
 			<a href="index.html">
 				<img
 								class="header-user-avatar"
-								src="images/avatar.jpg"
+								src="../images/avatar.jpg"
 								alt=""
 				>
 			</a>
@@ -67,8 +67,8 @@
 			copyright ITMOStudents
 			<br/>
 			Страница была загружена за <span id="download speed"></span> ms
-			<script type="text/javascript" src="scripts/footer-stopwatch.js"></script>
-			<script type="text/javascript" src="scripts/current-header-element.js"></script>
+			<script type="text/javascript" src="../scripts/footer-stopwatch.js"></script>
+			<script type="text/javascript" src="../scripts/current-header-element.js"></script>
 		</div>
 	</body>
 </html>
