fix: university censorship

--- a/Fellow-Students/pages/index.html
+++ b/Fellow-Students/pages/index.html
@@ -224,7 +224,7 @@
 						23 ноября 2022, 17:39
 					</div>
 					<div class="post__text">
-						Всем привет, сегодня я покакал.
+						Всем привет, сегодня я поплакал.
 					</div>
 					<div class="post__likes">
 						45 likes
