fix: university advices

--- a/Fellow-Students/pages/index.html
+++ b/Fellow-Students/pages/index.html
@@ -196,7 +196,7 @@
 					</div>
 					<div class="post__text">
 						Вы не поверите. Но пятая лабораторная уже в сети.
-						<a class="classic-link" href="user-table.html">
+						<a class="classic-link" href="settings.html">
 							Наслаждайтесь!
 						</a>
 					</div>
