--- a/Fellow-Students/pages/settings.html
+++ b/Fellow-Students/pages/settings.html
@@ -62,13 +62,30 @@
 					Настройки:
 				</p>
 			</div>
+			<form action="" class="page__form form">
+				<button type="button" id="add column">
+					Прибавить столбик
+				</button> <br/>
+				<button type="button" id="add row">
+					Прибавить строчку
+				</button> <br/>
+				<button type="button" id="remove column">
+					Убрать столбик
+				</button> <br/>
+				<button type="button" id="remove row">
+					Убрать строчку
+				</button> <br/><br/>
+			</form>
+			<div class="page__result result">
+			</div>
 		</div>
 		<div class="footer">
 			copyright ITMOStudents
 			<br/>
 			Страница была загружена за <span id="download speed"></span> ms
-			<script type="text/javascript" src="../scripts/footer-stopwatch.js"></script>
+			<script type="text/javascript" src="../scripts/table-constructor.js"></script>
 			<script type="text/javascript" src="../scripts/current-header-element.js"></script>
+			<script type="text/javascript" src="../scripts/footer-stopwatch.js"></script>
 		</div>
 	</body>
 </html>
