fix: university advices

--- a/Fellow-Students/pages/settings.html
+++ b/Fellow-Students/pages/settings.html
@@ -58,25 +58,25 @@
 	</div>
 		<div class="page__main main">
 			<div class="main__settings settings-block">
-				<p class="main__friends-paragraph">
+				<p class="friends-paragraph">
 					Настройки:
 				</p>
-			</div>
-			<form action="" class="page__form form">
-				<button type="button" id="add column">
-					Прибавить столбик
-				</button> <br/>
-				<button type="button" id="add row">
-					Прибавить строчку
-				</button> <br/>
-				<button type="button" id="remove column">
-					Убрать столбик
-				</button> <br/>
-				<button type="button" id="remove row">
-					Убрать строчку
-				</button> <br/><br/>
-			</form>
-			<div class="page__result result">
+				<form action="" class="page__form form">
+					<button type="button" id="add column">
+						Прибавить столбик
+					</button> <br/>
+					<button type="button" id="add row">
+						Прибавить строчку
+					</button> <br/>
+					<button type="button" id="remove column">
+						Убрать столбик
+					</button> <br/>
+					<button type="button" id="remove row">
+						Убрать строчку
+					</button> <br/><br/>
+				</form>
+				<div class="page__result result">
+				</div>
 			</div>
 		</div>
 		<div class="footer">
