feat: add lab-6

--- a/Fellow-Students/pages/messages.html
+++ b/Fellow-Students/pages/messages.html
@@ -58,9 +58,11 @@
 </div>
 <div class="page__main main">
 	<div class="main__messages messages-block">
-		<p class="main__messages-paragraph">
+		<p class="messages-block__paragraph">
 			Ваши сообщения:
 		</p>
+		<div id="default-picture"></div>
+		<div id="messages" class="messages-block__messages messages"></div>
 	</div>
 </div>
 <div class="footer">
@@ -69,6 +71,7 @@
 	Страница была загружена за <span id="download speed"></span> ms
 	<script type="text/javascript" src="../scripts/current-header-element.js"></script>
 	<script type="text/javascript" src="../scripts/footer-stopwatch.js"></script>
+	<script type="text/javascript" src="../scripts/messages-generating.js"></script>
 </div>
 </body>
 </html>
