feat: add lab-7

--- a/Fellow-Students/pages/index.html
+++ b/Fellow-Students/pages/index.html
@@ -192,6 +192,24 @@
 			<div class="blog user-content__blog">
 				<div class="user-content__post post">
 					<div class="post__time">
+						28 февраля, 17:06
+					</div>
+					<div class="post__text">
+						И пусть твоя <a class="classic-link" href="7.html">мечта</a> осуществится, <br/>
+						Реальную приняв, земную плоть, <br/>
+						Пусть лучшее с тобой еще случится, <br/>
+						С <a class="classic-link" href="7.html">мечтою</a> трудность сможешь побороть!
+
+
+					</div>
+					<div class="post__likes">
+						168 likes
+					</div>
+				</div>
+			</div>
+			<div class="blog user-content__blog">
+				<div class="user-content__post post">
+					<div class="post__time">
 						18 февраля, 13:11
 					</div>
 					<div class="post__text">
